[package]
name = "r-concurrency"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
dashmap = "6.1.0"
humantime = "2.1.0"
jsonwebtoken = "9.3.0"
oneshot = "0.1.8"
rand = "0.8.5"
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros", "net", "io-util"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
